<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBE1FA"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".menuActivity.Menu"
    tools:showIn="@layout/app_bar_menu">

    <Button
        android:id="@+id/kidsActivity"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/eng_kids"
        android:textColor="@color/sky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageActivity" />

    <Button
        android:id="@+id/taskActivity"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_background"
        android:text="@string/eng_tasks"
        android:textColor="@color/sky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/messageActivity"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/eng_messages"
        android:textColor="@color/sky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskActivity" />

    <Button
        android:id="@+id/doctorsActivity"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/eng_doctors"
        android:textColor="@color/sky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kidsActivity" />

    <Button
        android:id="@+id/settingsActivity"
        android:layout_width="268dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/eng_settings"
        android:textColor="@color/sky"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorsActivity" />


</androidx.constraintlayout.widget.ConstraintLayout>